--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "Argument-Graph-Retrieval"
 version = "1.0.0"
 description = ""
-authors = ["Mirko Lenz <mirko@lenz.am>"]
+authors = ["Mirko Lenz <info@mirko-lenz.de>"]
 
 [tool.poetry.dependencies]
 python = "^3.7"
@@ -13,7 +13,6 @@ flask = "^1.0"
 click = "^7.0"
 nltk = "^3.4"
 "ruamel.yaml" = "^0.15.96"
-pyemd = "^0.5.1"
 sklearn = "^0.0.0"
 tensorflow = "^1.13"
 tensorflow-hub = "^0.4.0"
