--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,5 +7,14 @@ services:
       - "8888:80"
     volumes:
       - .:/app
-    command: python -m recap_agr
     working_dir: "/app"
+    command: python -m recap_agr
+  # convert:
+  #   build: .
+  #   volumes:
+  #     - .:/app
+  #   working_dir: "/app"
+  #   entrypoint:
+  #     - python
+  #     - -m
+  #     - recap_agr.cli.convert
