--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -6,7 +6,7 @@
 		"docker-compose.extend.yml"
 	],
 	"service": "app",
-	"workspaceFolder": "/workspace",
+	"workspaceFolder": "/app",
 	"extensions": [
 		"ms-python.python",
 		"redhat.vscode-yaml"
