--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3'
+version: "3"
 
 services:
   app:
@@ -7,14 +7,4 @@ services:
       - "8888:80"
     volumes:
       - .:/app
-    working_dir: "/app"
     command: python -m recap_agr
-  # convert:
-  #   build: .
-  #   volumes:
-  #     - .:/app
-  #   working_dir: "/app"
-  #   entrypoint:
-  #     - python
-  #     - -m
-  #     - recap_agr.cli.convert
