--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 config.yml
-
+.idea
+data/**/*.pdf
 
 # Created by https://www.gitignore.io/api/linux,macos,python,windows,intellij,visualstudiocode
 # Edit at https://www.gitignore.io/?templates=linux,macos,python,windows,intellij,visualstudiocode
