--- a/.gitignore
+++ b/.gitignore
@@ -292,3 +292,6 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.gitignore.io/api/linux,macos,python,windows,intellij,visualstudiocode
+
+# Ignore dynaconf secret files
+.secrets.*
