--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,13 +8,11 @@ authors = ["Mirko Lenz <info@mirko-lenz.de>"]
 python = "^3.8,<3.11"
 numpy = "^1.22.2"
 scipy = "^1.8.0"
-gensim = "^4.1.2"
-Flask = "^2.0.2"
 typer = "^0.4.0"
-nltk = "^3.6.7"
 dynaconf = "^3.1.7"
 arguebuf = "^0.2.12"
 nlp-service = "^0.1.1"
+PyYAML = "^6.0"
 
 [build-system]
 requires = ["poetry>=0.12"]
