--- a/settings.toml
+++ b/settings.toml
@@ -1,50 +1,31 @@
 # If true, only one thread will be used (which decreases performance)
 debug = false
 
-# Language is needed for stopwords (english/german)
-language = "english"
-
-# Folder names
-casebase_folder = "data/case-base/english/microtexts-annotated"
-queries_folder = "data/queries/english/microtexts-annotated"
-embeddings_folder = "data/embeddings/english"
-candidates_folder = "data/candidates/microtexts"
-results_folder = "data/results"
+[path]
+cases = "data/case-base/english/microtexts-annotated"
+queries = "data/queries/english/microtexts-annotated"
+rankings = "data/candidates/microtexts"
+results = "data/results"
 ontology = "ontology.yml"
 
-# File names
-embeddings_supervised = ["infersent.pkl", "use-d", "use-t"]
-sif_weightfile = "data/sif/enwiki_vocab_min200.txt"
-infersent_w2v_file = "glove.txt"
+[nlp]
+url = "127.0.0.1:5678"
+lang = "en"
+embedding = "spacy"
+similarity = "cosine"
+token_vectors = false
+schemes = true
+ontology = false
 
-# Web server config
-flask_host = "127.0.0.1"
-flask_port = 8888
-app_name = "ReCAP-UTR/ArgueQuery"
+[cbr]
+mac = true
+fac = true
+queue_limit = 10000
+max_results = 10
 
-# Default values (can be adjusted in web app)
-operations = ["mean"]
-embeddings_filter = []
+[export]
+individual_results = false
+aggregated_results = true
 
-similarity_method = "cosine"
-token_weighting = "none"
-sif_parameter = 0.001
-
-similarity_threshold = 0.0
-retrieval_limit = 10
-
-export_results = false
-export_results_aggregated = true
-candidates_max_rank = 3
-
-perform_mac = true
-perform_fac = true
-a_star_queue_limit = 10000
-
-stemming = false
-ignore_stopwords = false
-
-use_schemes = false
-use_ontology = false
-
-number_of_runs = 1
+[evaluation]
+max_user_rank = 3
