Add first version of grpc retrieval service

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,13 +1,16 @@
 {
-	// Use IntelliSense to learn about possible attributes.
-	// Hover to view descriptions of existing attributes.
-	// For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-	"version": "0.2.0",
-	"configurations": [{
-		"name": "ReCAP AGR",
-		"type": "python",
-		"request": "launch",
-		"console": "integratedTerminal",
-		"module": "recap_agr"
-	}]
+  // Use IntelliSense to learn about possible attributes.
+  // Hover to view descriptions of existing attributes.
+  // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
+  "version": "0.2.0",
+  "configurations": [
+    {
+      "name": "Retrieval",
+      "type": "python",
+      "request": "launch",
+      "console": "integratedTerminal",
+      "module": "arguequery",
+      "env": { "DYNACONF_DEBUG": "true" }
+    }
+  ]
 }
