--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dynaconf = "^3.1.7"
 arguebuf = "^0.2.12"
 nlp-service = "^0.1.3"
 PyYAML = "^6.0"
+arg-services = "^0.1.23"
 
 [build-system]
 requires = ["poetry>=0.12"]
