--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,11 +5,19 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "name": "Retrieval",
+      "name": "Server",
       "type": "python",
       "request": "launch",
       "console": "integratedTerminal",
-      "module": "arguequery",
+      "module": "arguequery.server",
+      "env": { "DYNACONF_DEBUG": "true" }
+    },
+    {
+      "name": "Client",
+      "type": "python",
+      "request": "launch",
+      "console": "integratedTerminal",
+      "module": "arguequery.client",
       "env": { "DYNACONF_DEBUG": "true" }
     }
   ]
