--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,4 +7,4 @@ services:
       - "8888:80"
     volumes:
       - .:/app
-    command: python -m recap_agr
+    command: python -m arguequery 0.0.0.0 80
