--- a/settings.toml
+++ b/settings.toml
@@ -1,9 +1,7 @@
 # If true, only one thread will be used (which decreases performance)
 debug = true
-
-[microservices]
-nlp = "0.0.0.0:5678"
-retrieval = "0.0.0.0:6789"
+nlp_address = "127.0.0.1:5678"
+retrieval_address = "127.0.0.1:6789"
 
 [path]
 scheme_ontology = "ontology.yml"
