--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,14 +6,14 @@ authors = ["Mirko Lenz <info@mirko-lenz.de>"]
 
 [tool.poetry.dependencies]
 python = "^3.8,<3.11"
-numpy = "^1.22.2"
-scipy = "^1.8.0"
+numpy = "^1.24.1"
+scipy = "^1.10.0"
 typer = "^0.7.0"
-dynaconf = "^3.1.7"
-arguebuf = "^1.0.0"
-nlp-service = "^0.3.0"
-PyYAML = "^6.0"
-arg-services = "^0.3.0"
+dynaconf = "^3.1.11"
+arguebuf = "^1.2.4"
+nlp-service = "^1.1.0"
+pyyaml = "^6.0"
+arg-services = "^1.0.2"
 
 [build-system]
 requires = ["poetry>=0.12"]
