--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,8 @@ dynaconf = "^3.1.11"
 arguebuf = "^1.2.4"
 nlp-service = "^1.1.0"
 pyyaml = "^6.0"
-arg-services = "^1.0.2"
+arg-services = "^1.0.4"
+mashumaro = "^3.3"
 
 [build-system]
 requires = ["poetry>=0.12"]
