--- a/settings.toml
+++ b/settings.toml
@@ -25,8 +25,10 @@ evaluation_output = "data/results"
 language = "en"
 nlp_config = "default"
 enforce_scheme_types = false
-use_scheme_ontology = false  # only relevant if 'enforce_scheme_types = true'
-mapping_algorithm = "astar"
+# 'use_scheme_ontology' is only relevant if 'enforce_scheme_types = true'
+use_scheme_ontology = false
+mapping_algorithm = "astar_3"
+graph2text_algorithm = "node_id"
 limit = 10
 mac = true
 fac = true
