--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ arg-services = "^1.0.4"
 mashumaro = "^3.3"
 arguebuf = { version = "^2.0.0b8", allow-prereleases = true }
 hydra-core = "^1.3.1"
+rich = "^13.0.1"
 
 [build-system]
 requires = ["poetry>=0.12"]
