--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,23 +1,17 @@
 [tool.poetry]
-name = "Argument-Graph-Retrieval"
+name = "arguequery"
 version = "1.0.0"
 description = ""
 authors = ["Mirko Lenz <info@mirko-lenz.de>"]
 
 [tool.poetry.dependencies]
-python = "^3.9,<3.11"
-numpy = "^1.24.1"
-scipy = "^1.10.0"
+python = ">=3.9,<3.12"
 typer = "^0.7.0"
-dynaconf = "^3.1.11"
-nlp-service = "^1.1.0"
+nlp-service = "^1.2.2"
 pyyaml = "^6.0"
-arg-services = "^1.0.4"
-mashumaro = "^3.3"
-arguebuf = { version = "^2.0.0b8", allow-prereleases = true }
-hydra-core = "^1.3.1"
-rich = "^13.0.1"
+arg-services = "^1.1.0"
+arguebuf = { version = "^2.0.0b13", allow-prereleases = true }
 
 [build-system]
-requires = ["poetry>=0.12"]
+requires = ["poetry"]
 build-backend = "poetry.masonry.api"
