feat!: rewrite the application based on cbrkit

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,9 +6,8 @@
   "configurations": [
     {
       "name": "App",
-      "type": "python",
+      "type": "debugpy",
       "request": "launch",
-      "console": "integratedTerminal",
       "module": "arguequery"
     }
   ]
