fix: adapt to changes in cbrkit and nlp-service

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,15 +8,9 @@ dependencies = [
     "arg-services>=1,<2",
     "arguebuf>=2,<3",
     "cbrkit[graphs]>=0,<1",
-    "nlp-service>=2,<3",
+    "nlp-service[all]>=2,<3",
     "pyyaml>=6,<7",
     "typer>=0,<1",
-]
-
-[dependency-groups]
-dev = [
-    "en-core-web-lg==3.7.1; sys_platform == 'darwin' and platform_machine == 'x86_64'",
-    "en-core-web-lg==3.8.0; (sys_platform == 'darwin' and platform_machine == 'arm64') or sys_platform == 'linux'",
 ]
 
 [project.scripts]
