--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,15 +10,17 @@ dependencies = [
     "cbrkit[graphs]>=0,<1",
     "nlp-service[all]>=2,<3",
     "pyyaml>=6,<7",
+    "transformers>=4,<4.52",
     "typer>=0,<1",
 ]
+# TODO: unpin transformers once this has been released: https://github.com/huggingface/transformers/pull/38376
 
 [project.scripts]
 arguequery = "arguequery.server:app"
 
 [build-system]
-requires = ["setuptools>=61"]
-build-backend = "setuptools.build_meta"
+requires = ["uv-build>=0.7,<1"]
+build-backend = "uv_build"
 
 [tool.uv.sources.cbrkit]
 path = "../../wi2trier/cbrkit"
